@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.736 2003/02/19 10:16:27 jonnymind Exp $
+ * $Id: ChangeLog,v 1.737 2003/02/19 10:51:08 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-02-19 13:14 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/vm/hvm.c
+    % Using now HB_VM_STACK optimization (reading stack only once
+      per function) when threads are enabled
 
 2003-02-19 11:50 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/classes.c
